# ofxcruncher

./: .gitignore  Cargo.toml  LICENSE  README.md
sample/: README.md
sample/inputs/: sampleinput1.ofx
src/: collector.rs  main.rs  parsing.rs  sample.rs
